Keep Java LSP in process